# lau-sobolev-agents

./: AGENT.md  Cargo.toml  README.md
src/: agent_policy.rs  embedding.rs  fractional.rs  gagliardo_nirenberg.rs  lib.rs  poincare.rs  rellich_kondrachov.rs  sobolev_norm.rs  sobolev_space.rs  trace.rs  weak_derivative.rs
