[package]
name = "lau-sobolev-agents"
version = "0.1.0"
edition = "2021"
description = "Sobolev spaces for agents — smoothness classes of agent behavior"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
